--- a/aws-java-simple-http-endpoint/serverless.yml
+++ b/aws-java-simple-http-endpoint/serverless.yml
@@ -1,10 +1,12 @@
 service: aws-java-simple-http-endpoint
 
-frameworkVersion: ">=1.2.0 <2.0.0"
+frameworkVersion: ">=1.2.0 <3.0.0"
 
 provider:
   name: aws
   runtime: java8
+  stage: dev
+  region: ap-southeast-1
   
 package:
   artifact: build/distributions/aws-java-simple-http-endpoint.zip
